Correção de bugs e padronização da sidebar. #39